NIFI-12572 Refactor components in azure bundle using current API methods